[tool.poetry]
name = "dhos-medications-api"
version = "0.0.1"
description = "API application for managing medications in DHOS"
authors = ["Andrew Gill <andrew.gill@sensynehealth.com>"]
keywords = ["Medications", "Medicine"]
repository = "https://github.com/draysontechnologies/dhos-medications-api"

[[tool.poetry.source]]
name = "sensynehealth"
url = "https://pypi.fury.io/sensynehealth/"

[tool.poetry.dependencies]
python = "^3.9"
connexion = {version = "2.*", extras = ["swagger-ui"]}
she-logging = "1.*"
flask-batteries-included = {version = "3.*", extras = ["apispec", "pgsql"]}
importlib_resources = "*"
importlib_metadata = "*"
jsonschema = "3.*"

[tool.poetry.dev-dependencies]
bandit = "*"
black = "*"
coloredlogs = "*"
coverage = "*"
isort = "*"
mock = "*"
mypy = "*"
pytest = "*"
pytest-dhos = {version = "*", extras=["fbi"]}
pytest-flask = "*"
pytest-mock = "*"
requests_mock = "1.8.*"
sadisplay = "*"
safety = "*"
tox = "*"
types-PyYAML = "*"
types-requests = "*"

[tool.mypy]
namespace_packages=true
ignore_missing_imports=false
disallow_untyped_defs=true

[[tool.mypy.overrides]]
module = [
    "requests_mock",
    "pytest",
    "environs",
    "jose",
    "waitress",
    "connexion",
    "pytest_mock",
    "apispec.*",
    "apispec_webframeworks.*",
    "sadisplay",
    "sqlalchemy.*",
    "flask_sqlalchemy"
]
ignore_missing_imports = true

[tool.isort]
profile = "black"
known_third_party = ["alembic", "apispec", "apispec_webframeworks", "behave", "click", "clients", "connexion", "environs", "faker", "flask", "flask_batteries_included", "flask_sqlalchemy", "helpers", "marshmallow", "pytest", "reporting", "reportportal_behave", "requests", "sadisplay", "she_logging", "sqlalchemy", "waitress", "yaml"]

[tool.black]
line-length = 88
target-version = ["py39"]
